Use new names of CSS classes.
Fix border box

--- a/example/autodropdown.css
+++ b/example/autodropdown.css
@@ -1,7 +1,6 @@
 
-
-/*.autodropdown-input*/
-#search-term {
+/* This is for the <input> box */
+.autodropdown-input {
     width: 100%;
     padding: 12px 16px;
     padding-right: 50px;
@@ -14,24 +13,25 @@
     color: #111827;
 }
 
-/*.autodropdown-input-open */
-#search-term.dropdown-open {
+/* This is used when the AutoDropdown shows
+ * its list of suggestions */
+.autodropdown-input-open {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     border-color: #4c51bf;
 }
 
-/*.autodropdown-input:focus*/
-#search-term:focus {
+/* This is when the keyboard cursor is focused in the
+ * <input> box */
+.autodropdown-input:focus {
     border-color: #4c51bf;
     outline: none;
     box-shadow: 0 0 0 3px rgba(76, 81, 191, 0.2);
 }
 
 
-/*.autodropdown-list*/
-/* Suggestion Dropdown Styles */
-.suggestion-dropdown {
+/* This styles the <ul> which is the list of suggestions */
+.autodropdown-list {
     position: absolute;
     top: 100%;
     left: 0;
@@ -39,10 +39,11 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    padding-top: 3px;
+    padding-top: 0;
     border: 3px solid #4c51bf;
     border-top: none;
     border-radius: 0 0 12px 12px;
+    box-sizing: border-box;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
     background-color: white;
     z-index: 20;
@@ -52,8 +53,8 @@
     display: block;
 }
 
-/*.autodropdown-item { */
-.suggestion-item {
+/* This is for each <li> in the suggestion <ul> */
+.autodropdown-item {
     padding: 10px 16px;
     cursor: pointer;
     color: #111827;
@@ -62,12 +63,12 @@
     border-bottom: 1px solid #f0f0f0;
 }
 
-/*.autodropdown-item-highlighted { */
-.suggestion-item-highlighted {
+/* This is for the <li> which is currently highlighted */
+.autodropdown-item-highlighted {
     background-color: #f0f4ff; /* Light blue highlight */
 }
 
-/*.autodropodown-item:last-child { */
-.suggestion-item:last-child {
+/* For this CSS, the last <li> should look a bit different */
+.autodropodown-item:last-child {
     border-bottom: none;
 }
